Version 4.18.2 - 10 September 2008, Thierry Vignaud

- fix opening the right RPM DB with --env
- workaround looping in URPM->traverse_tag when using --env

Version 4.18.1 - 9 September 2008, Thierry Vignaud

- rpmdrake:
  o fix crashing when selecting all packages (#40025)

Version 4.18 - 9 September 2008, Thierry Vignaud

- all:
  o adapt to urpmi-6.6+ new API (which workaround urpmi API breakage
    #43639)
  o do not ignore some options
  o handle --debug, --env, -q, --quiet, -v & --verbose options
- rpmdrake:
  o display a busy cursor while fetching package list on startup
  o remove short lived wait message when changing selected package
    group (#43320) since it's too fast
  o update GUI package list

Version 4.17 - 4 September 2008, Thierry Vignaud

- all
  o be able to handle --expert
  o do not display a splash text anymore
- edit-urpm-sources:
  o by default do not enable to alter the 'update' flag (unless
    --expert is given)
- gurpmi.addmedia
  o instead of discarding --update when using --distrib, give it a meaning:
    only add media flagged "update"
- rpmdrake:
  o update GUI package list

Version 4.16 - 26 August 2008, Thierry Vignaud

- MandrivaUpdate:
  o fix sorting by type of update
- rpmdrake:
  o make --mode option work again
  o workaround crashing when media's MD5SUM are garbaged (#41352)

Version 4.15 - 25 August 2008, Thierry Vignaud

- rpmdrake:
  o fix a rare crash when canceling (#41970)
  o list meta tasks in GUI package list too (#43114)
  o update GUI package list

Version 4.14 - 7 August 2008, Thierry Vignaud

- gurpmi.addmedia:
  o fix displaying --help
  o fix --urpmi-root option
- rpmdrake:
  o update GUI package list

Version 4.13 - 6 August 2008, Thierry Vignaud

- rpmdrake:
  o behaves like urpmi, allow to continue, thus skipping the bogus
    transaction instead of short-circuiting urpm::main_loop
  o fix some error dialogs not being modal
  o update GUI package list

Version 4.12 - 2 July 2008, Thierry Vignaud
