@@ -1,3 +1,6 @@
+- do display conflicting packages instead of silently removing them
+  (needs urpmi 6.11) (#43501)
+
 Version 4.18.2 - 10 September 2008, Thierry Vignaud
 
 - fix opening the right RPM DB with --env
